--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-  # This workflow uses actions that are not certified by GitHub.
+# This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
@@ -18,10 +18,14 @@ jobs:
 
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Conventional Changelog Action
+      uses: TriPSs/conventional-changelog-action@v5.1.0
+            
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
